# agentctl

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.json
.github/workflows/: ci.yml  release.yml
docs/: hub-config.md  hub-management.md  mcp-management.md  release.md  roadmap.md  skill-management.md  technology-choice.md
docs/archive/: phase-1-hub-validation.md  phase-2-hub-registry.md  phase-3-skill-management.md  phase-4-config-management.md  phase-4.5-enhanced-ignore.md  phase-5-skill-export.md  phase-5.5-hub-refresh-enhancement.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/hub/: cache.rs  config.rs  generate.rs  mod.rs  registry.rs  schema.rs  validate.rs
src/skill/: lifecycle.rs  lock.rs  mod.rs  vars.rs
tests/: config_integration.rs  enhanced_ignore_patterns.rs  hub_force_refresh_test.rs  hub_integration.rs  lifecycle_integration.rs  skill_export_test.rs  skill_integration.rs
tests/common/: mod.rs
tests/fixtures/: cache-index.json  config-defaults.json  config-valid.json  skill-index.json
tests/fixtures/docs-hub-invalid/section/: incomplete.md
tests/fixtures/docs-hub/section/: guide.md
tests/fixtures/skills-hub-invalid/bad-skill/: SKILL.md
tests/fixtures/skills-hub-valid/my-skill/: SKILL.md
tests/fixtures/skills-hub/bad-skill/: SKILL.md
tests/fixtures/skills-hub/my-skill/: SKILL.md
