[package]
name = "agent-ctl"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["Jerome Guibert <jguibert@gmail.com>"]
description = "CLI for agent hub validation, index generation, and skill management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geronimo-iia/agentctl"
homepage = "https://github.com/geronimo-iia/agentctl"
documentation = "https://github.com/geronimo-iia/agentctl#readme"
readme = "README.md"
keywords = ["cli", "agent", "hub", "validation"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "tests/fixtures/", "docs/"]

[[bin]]
name = "agentctl"
path = "src/main.rs"

[lib]
name = "agentctl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
